--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
     "name": "wealth-health",
-    "version": "0.1.0",
+    "version": "1.0.0",
     "private": true,
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.1",
         "@tanstack/react-table": "^8.13.2",
-        "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
         "react": "^18.2.0",
+        "react-component-hw": "^1.0.4",
         "react-data-table-component": "^7.6.2",
         "react-date-picker": "^10.6.0",
         "react-dom": "^18.2.0",
@@ -16,8 +14,7 @@
         "react-redux": "^9.1.0",
         "react-router-dom": "^6.22.3",
         "react-scripts": "5.0.1",
-        "sass": "^1.72.0",
-        "web-vitals": "^2.1.4"
+        "sass": "^1.72.0"
     },
     "scripts": {
         "start": "react-scripts start",
